<resources>
    <string name="app_name">COVID-19</string>
    <string name="BemVindo">Welcome</string>
    <string name="Pessoas">People</string>
    <string name="Resgitar">Register</string>
    <string name="Movimentos">Movement</string>
    <string name="Infetados">Infected</string>
    <string name="Sair">Leave</string>
    <string name="Nome">Name</string>
    <string name="Guardar">Save</string>
    <string name="Sucesso">Sucess</string>
    <string name="TipoPessoas">Kind of person</string>
    <string name="AvisoFaltaOTipo">You have to write the type</string>
    <string name="FaltaNomeDaPessoa">You have to write the Name</string>
    <string name="title_activity_test">test</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Editar">Edit the person</string>
    <string name="EditarBotao">Edit</string>
    <string name="FaltaData">Insert a date</string>
    <string-array name="Infectado_ID">
        <item> Positivo </item>
        <item> Negativo </item>
    </string-array>
    <string name="AdicionarPessoa">Add person</string>
    <string name="MovimentoEditado">Successfully changed</string>
    <string name="OcorreuErro">Error: Try again later</string>
    <string name="ApagadoComSucesso">Successfully delete</string>
    <string name="DeletePessoa">Delete person</string>
    <string name="AvisoDeletePessoa">Are you sure you want to delete?</string>
    <string name="SimDelete">Yes, delete</string>
    <string name="NaoDelete">No, canceled</string>
    <string name="Cancelado">Canceled</string>
    <string name="EntrouRegistoPessoas">You are in the people registration menu</string>
    <string name="EntrouRegistoMovimentos">It is in the people movement registration menu</string>
    <string name="EntrouRegistoInfectados">You are in the menu to register the infected person</string>
    <string name="SaiuDaApp">You leave app \"COVID19\"</string>
    <string name="Regressar">Came back</string>
    <string name="EstaPessoaTemCovid">Record whether the person has COVID19 or not</string>
    <string name="PonhaHoraEntrada">Put time of entry</string>
    <string name="PonhaHoraSaida">Put time out</string>
    <string name="EscolhaData">Select Date</string>
    <string name="AdicionarMovimento">Add movement</string>
    <string name="EditarMovimento">Edit the movement</string>
    <string name="ApagarBotao">Delete</string>
    <string name="Infectado">Infected</string>
    <string name="HoraEntrada">Check-in Time</string>
    <string name="HoraSaida">Time left</string>
    <string name="Data">Date</string>
    <string name="ApagarPessoa">Delete person</string>
</resources>
