<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPessoasEliminar">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="50dp"
        android:layout_height="24dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="30dp"
        android:text="@string/Nome"
        android:textAllCaps="false"
        android:textColor="@color/colorRew"
        android:textSize="18sp"
        android:textStyle="italic"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textViewNome"
        android:layout_width="174dp"
        android:layout_height="23dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="31dp"
        android:text="Celeste"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="italic"
        android:typeface="sans"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="114dp"
        android:layout_height="27dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/TipoPessoas"
        android:textAllCaps="false"
        android:textColor="@color/colorRew"
        android:textSize="18sp"
        android:textStyle="italic"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textViewTipoPessoa"
        android:layout_width="174dp"
        android:layout_height="23dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="23dp"
        android:text="Orador"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="italic"
        android:typeface="sans"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textViewNome" />

    <Button
        android:id="@+id/ApagarNome"
        android:layout_width="401dp"
        android:layout_height="41dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/borda_eliminar_vermelho"
        android:text="@string/ApagarBotao"
        android:textAllCaps="false"
        android:textStyle="italic"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/SairDoDelete"
        android:layout_width="401dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/borda_apagar"
        android:onClick="Leave"
        android:text="@string/Sair"
        android:textAllCaps="false"
        android:textStyle="italic"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ApagarNome" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="205dp"
        android:layout_height="53dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/ApagarPessoa"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="34sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>