<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuEditarMovimento">

    <TextView
        android:id="@+id/selectDateEditar"
        android:layout_width="107dp"
        android:layout_height="25dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/EscolhaData"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="20sp"
        android:textStyle="italic"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BuscarPessoaspinner" />

    <EditText
        android:id="@+id/dataEntradaEditar"
        android:layout_width="381dp"
        android:layout_height="44dp"
        android:layout_marginStart="10dp"

        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:digits="1234567890:"
        android:ems="10"
        android:hint="@string/PonhaHoraEntrada"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="italic"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectDateEditar" />

    <EditText
        android:id="@+id/dataSaidaEditar"
        android:layout_width="381dp"
        android:layout_height="44dp"

        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:digits="1234567890:"
        android:ems="10"
        android:hint="@string/PonhaHoraSaida"
        android:inputType="textPersonName"
        android:maxLength="5"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="italic"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataEntradaEditar" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/EditarMovimento"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="italic"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/EditardataMovimento"
        android:layout_width="401dp"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/borda_editar"
        android:onClick="EditarDataMovimento"
        android:text="@string/EditarBotao"
        android:textAllCaps="false"
        android:textStyle="italic"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataSaidaEditar" />

    <Button
        android:id="@+id/CancelardataMovimento"
        android:layout_width="401dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:onClick="CancelarEditarMovimento"
        android:text="Cancelar"
        android:background="@drawable/borda_apagar"
        android:textAllCaps="false"
        android:textStyle="italic"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditardataMovimento" />

    <Spinner
        android:id="@+id/BuscarPessoaspinner"
        android:layout_width="381dp"
        android:layout_height="26dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
</android.support.constraint.ConstraintLayout>