<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp">

    <TextView
        android:id="@+id/NomePessoaMovimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/Nome"
        android:textColor="@color/colorRew"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDadosNomeMovimento"
        android:layout_width="65dp"
        android:layout_height="19dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:text="Cheng"
        app:layout_constraintStart_toEndOf="@+id/NomePessoaMovimento"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDataEntradaMovimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="4dp"
        android:text="@string/HoraEntrada"
        android:textColor="@color/colorRew"
        app:layout_constraintStart_toEndOf="@+id/textViewDadosNomeMovimento"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewHoraSAidaMovimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:text="@string/HoraSaida"
        android:textColor="@color/colorRew"
        app:layout_constraintStart_toEndOf="@+id/textViewDataMovimento"
        app:layout_constraintTop_toBottomOf="@+id/textViewDataEntradaMovimento" />

    <TextView
        android:id="@+id/textViewDiaMesAnoMovimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/Data"
        android:textColor="@color/colorRew"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NomePessoaMovimento" />

    <TextView
        android:id="@+id/textViewHoraEntradaMovimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:text="15:20"
        app:layout_constraintStart_toEndOf="@+id/textViewDataEntradaMovimento"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewHoraSaidaMovimenbto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="12dp"
        android:text="16:20"
        app:layout_constraintStart_toEndOf="@+id/textViewHoraSAidaMovimento"
        app:layout_constraintTop_toBottomOf="@+id/textViewDataEntradaMovimento" />

    <TextView
        android:id="@+id/textViewDataMovimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="12dp"
        android:text="27/05/2020"
        app:layout_constraintStart_toEndOf="@+id/textViewDiaMesAnoMovimento"
        app:layout_constraintTop_toBottomOf="@+id/NomePessoaMovimento" />
</android.support.constraint.ConstraintLayout>